--- a/src/00-structure/leap.02.in
+++ b/src/00-structure/leap.02.in
@@ -6,13 +6,13 @@ source leaprc.protein.ff14SB
 source leaprc.gaff2
 source leaprc.water.tip3p 
 
+LIG_A = loadmol2 antechamber/ligand.chainA.mol2
+loadamberparams antechamber/ligand.chainA.frcmod
 
-PRO = loadpdb pdb/02-processed/protein.pdb
+LIG_B = loadmol2 antechamber/ligand.chainB.mol2
+loadamberparams antechamber/ligand.chainB.frcmod
 
-LIG = loadmol2 antechamber/ligand.mol2
-loadamberparams antechamber/ligand.frcmod
-
-COM = combine{PRO LIG}
+COM = combine{PRO LIG_A LIG_B}
 
 solvateOct COM TIP3PBOX 8
 
