--- a/src/00-structure/leap.04.in
+++ b/src/00-structure/leap.04.in
@@ -1,6 +1,6 @@
-# Add ions to protein/ligand complex
-# 
-# Usage: tleap -s -f src/00-structure/leap.03.in
+# Configure protein/ligand complexfor MD simulation
+#
+# Usage: tleap -s -f src/00-structure/leap.04.in
 
 source leaprc.protein.ff14SB
 source leaprc.gaff2
@@ -22,7 +22,7 @@ charge COM
 addions COM K+ 2 # Add iond to neutralize sytems's charge
 charge COM
 
-saveamberparm COM tmp/test.prmtop tmp/test.crd
-savepdb COM tmp/test.pdb
+saveamberparm COM data/00-structure/complex.prmtop data/00-structure/complex.inpcrd
+savepdb COM data/00-structure/complex.pdb
 
 quit
